footer added and links added in header

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -3,17 +3,19 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
   // background-color: rgb(26, 32, 53);
   // color: white;
+
   .wrap {
     position: relative;
     max-width: 1450px;
     height: 100%;
     margin: 0 auto;
+    $wrap-left: 10px;
 
     .logo {
       width: max-content;
       position: absolute;
       top: 50%;
-      left: 100px;
+      left: $wrap-left;
       -webkit-transform: translateY(-50%);
       -moz-transform: translateY(-50%);
       transform: translateY(-50%);
@@ -27,10 +29,44 @@
       font-weight: bold;
       position: relative;
       top: 35%;
-      left: 100+40px;
+      left: $wrap-left + 40px;
       -webkit-transform: translateY(-50%);
       -moz-transform: translateY(-50%);
       transform: translateY(-50%);
+    }
+    a {
+      color: black;
+      text-decoration: none;
+    }
+    .nav-items {
+      position: absolute;
+      top: 50%;
+      right: $wrap-left + 40px;
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      transform: translateY(-50%);
+
+      ul,
+      li {
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
+        list-style-type: none;
+        display: inline;
+        padding-left: 20px;
+        a {
+          color: black;
+          font-size: 1.5rem;
+          line-height: 1;
+          text-decoration: none;
+          text-transform: uppercase;
+        }
+        a:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
