--- a/src/default.scss
+++ b/src/default.scss
@@ -12,7 +12,8 @@ body {
 html,
 body,
 #root,
-.App {
+.App,
+.container {
   height: 100%;
 }
 
@@ -44,7 +45,6 @@ a:hover {
 
 .main {
   width: 85%;
-  height: calc(100% - 6.5rem);
   max-width: 1450px;
   padding: 0 10px;
   margin: 0 auto;
